src/rules/__snapshots__/prefer-native-element.spec.ts.snap
// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`rule prefer-native-element default config smoketest 1`] = `
"error: Prefer to use the native <article> element (prefer-native-element) at test-files/rules/prefer-native-element.html:3:6:
  1 | <div role="unknown"></div>
  2 |
> 3 | <div role="article"></div>
    |      ^^^^^^^^^^^^^^
  4 | <div role="banner"></div>
  5 | <div role="button"></div>
  6 | <div role="cell"></div>
Selector: div:nth-child(2)
error: Prefer to use the native <header> element (prefer-native-element) at test-files/rules/prefer-native-element.html:4:6:
  2 |
  3 | <div role="article"></div>
> 4 | <div role="banner"></div>
    |      ^^^^^^^^^^^^^
  5 | <div role="button"></div>
  6 | <div role="cell"></div>
  7 | <div role="checkbox"></div>
Selector: div:nth-child(3)
error: Prefer to use the native <button> element (prefer-native-element) at test-files/rules/prefer-native-element.html:5:6:
  3 | <div role="article"></div>
  4 | <div role="banner"></div>
> 5 | <div role="button"></div>
    |      ^^^^^^^^^^^^^
  6 | <div role="cell"></div>
  7 | <div role="checkbox"></div>
  8 | <div role="complementary"></div>
Selector: div:nth-child(4)
error: Prefer to use the native <td> element (prefer-native-element) at test-files/rules/prefer-native-element.html:6:6:
  4 | <div role="banner"></div>
  5 | <div role="button"></div>
> 6 | <div role="cell"></div>
    |      ^^^^^^^^^^^
  7 | <div role="checkbox"></div>
  8 | <div role="complementary"></div>
  9 | <div role="contentinfo"></div>
Selector: div:nth-child(5)
error: Prefer to use the native <input> element (prefer-native-element) at test-files/rules/prefer-native-element.html:7:6:
   5 | <div role="button"></div>
   6 | <div role="cell"></div>
>  7 | <div role="checkbox"></div>
     |      ^^^^^^^^^^^^^^^
   8 | <div role="complementary"></div>
   9 | <div role="contentinfo"></div>
  10 | <div role="figure"></div>
Selector: div:nth-child(6)
error: Prefer to use the native <aside> element (prefer-native-element) at test-files/rules/prefer-native-element.html:8:6:
   6 | <div role="cell"></div>
   7 | <div role="checkbox"></div>
>  8 | <div role="complementary"></div>
     |      ^^^^^^^^^^^^^^^^^^^^
   9 | <div role="contentinfo"></div>
  10 | <div role="figure"></div>
  11 | <div role="form"></div>
Selector: div:nth-child(7)
error: Prefer to use the native <footer> element (prefer-native-element) at test-files/rules/prefer-native-element.html:9:6:
   7 | <div role="checkbox"></div>
   8 | <div role="complementary"></div>
>  9 | <div role="contentinfo"></div>
     |      ^^^^^^^^^^^^^^^^^^
  10 | <div role="figure"></div>
  11 | <div role="form"></div>
  12 | <div role="heading"></div>
Selector: div:nth-child(8)
error: Prefer to use the native <figure> element (prefer-native-element) at test-files/rules/prefer-native-element.html:10:6:
   8 | <div role="complementary"></div>
   9 | <div role="contentinfo"></div>
> 10 | <div role="figure"></div>
     |      ^^^^^^^^^^^^^
  11 | <div role="form"></div>
  12 | <div role="heading"></div>
  13 | <div role="input"></div>
Selector: div:nth-child(9)
error: Prefer to use the native <form> element (prefer-native-element) at test-files/rules/prefer-native-element.html:11:6:
   9 | <div role="contentinfo"></div>
  10 | <div role="figure"></div>
> 11 | <div role="form"></div>
     |      ^^^^^^^^^^^
  12 | <div role="heading"></div>
  13 | <div role="input"></div>
  14 | <div role="link"></div>
Selector: div:nth-child(10)
error: Prefer to use the native <hN> element (prefer-native-element) at test-files/rules/prefer-native-element.html:12:6:
  10 | <div role="figure"></div>
  11 | <div role="form"></div>
> 12 | <div role="heading"></div>
     |      ^^^^^^^^^^^^^^
  13 | <div role="input"></div>
  14 | <div role="link"></div>
  15 | <div role="list"></div>
Selector: div:nth-child(11)
error: Prefer to use the native <input> element (prefer-native-element) at test-files/rules/prefer-native-element.html:13:6:
  11 | <div role="form"></div>
  12 | <div role="heading"></div>
> 13 | <div role="input"></div>
     |      ^^^^^^^^^^^^
  14 | <div role="link"></div>
  15 | <div role="list"></div>
  16 | <div role="listbox"></div>
Selector: div:nth-child(12)
error: Prefer to use the native <a> element (prefer-native-element) at test-files/rules/prefer-native-element.html:14:6:
  12 | <div role="heading"></div>
  13 | <div role="input"></div>
> 14 | <div role="link"></div>
     |      ^^^^^^^^^^^
  15 | <div role="list"></div>
  16 | <div role="listbox"></div>
  17 | <div role="listitem"></div>
Selector: div:nth-child(13)
error: Prefer to use the native <ul> element (prefer-native-element) at test-files/rules/prefer-native-element.html:15:6:
  13 | <div role="input"></div>
  14 | <div role="link"></div>
> 15 | <div role="list"></div>
     |      ^^^^^^^^^^^
  16 | <div role="listbox"></div>
  17 | <div role="listitem"></div>
  18 | <div role="main"></div>
Selector: div:nth-child(14)
error: Prefer to use the native <select> element (prefer-native-element) at test-files/rules/prefer-native-element.html:16:6:
  14 | <div role="link"></div>
  15 | <div role="list"></div>
> 16 | <div role="listbox"></div>
     |      ^^^^^^^^^^^^^^
  17 | <div role="listitem"></div>
  18 | <div role="main"></div>
  19 | <div role="navigation"></div>
Selector: div:nth-child(15)
error: Prefer to use the native <li> element (prefer-native-element) at test-files/rules/prefer-native-element.html:17:6:
  15 | <div role="list"></div>
  16 | <div role="listbox"></div>
> 17 | <div role="listitem"></div>
     |      ^^^^^^^^^^^^^^^
  18 | <div role="main"></div>
  19 | <div role="navigation"></div>
  20 | <div role="progressbar"></div>
Selector: div:nth-child(16)
error: Prefer to use the native <main> element (prefer-native-element) at test-files/rules/prefer-native-element.html:18:6:
  16 | <div role="listbox"></div>
  17 | <div role="listitem"></div>
> 18 | <div role="main"></div>
     |      ^^^^^^^^^^^
  19 | <div role="navigation"></div>
  20 | <div role="progressbar"></div>
  21 | <div role="radio"></div>
Selector: div:nth-child(17)
error: Prefer to use the native <nav> element (prefer-native-element) at test-files/rules/prefer-native-element.html:19:6:
  17 | <div role="listitem"></div>
  18 | <div role="main"></div>
> 19 | <div role="navigation"></div>
     |      ^^^^^^^^^^^^^^^^^
  20 | <div role="progressbar"></div>
  21 | <div role="radio"></div>
  22 | <div role="region"></div>
Selector: div:nth-child(18)
error: Prefer to use the native <progress> element (prefer-native-element) at test-files/rules/prefer-native-element.html:20:6:
  18 | <div role="main"></div>
  19 | <div role="navigation"></div>
> 20 | <div role="progressbar"></div>
     |      ^^^^^^^^^^^^^^^^^^
  21 | <div role="radio"></div>
  22 | <div role="region"></div>
  23 | <div role="table"></div>
Selector: div:nth-child(19)
error: Prefer to use the native <input> element (prefer-native-element) at test-files/rules/prefer-native-element.html:21:6:
  19 | <div role="navigation"></div>
  20 | <div role="progressbar"></div>
> 21 | <div role="radio"></div>
     |      ^^^^^^^^^^^^
  22 | <div role="region"></div>
  23 | <div role="table"></div>
  24 | <div role="textbox"></div>
Selector: div:nth-child(20)
error: Prefer to use the native <section> element (prefer-native-element) at test-files/rules/prefer-native-element.html:22:6:
  20 | <div role="progressbar"></div>
  21 | <div role="radio"></div>
> 22 | <div role="region"></div>
     |      ^^^^^^^^^^^^^
  23 | <div role="table"></div>
  24 | <div role="textbox"></div>
  25 |
Selector: div:nth-child(21)
error: Prefer to use the native <table> element (prefer-native-element) at test-files/rules/prefer-native-element.html:23:6:
  21 | <div role="radio"></div>
  22 | <div role="region"></div>
> 23 | <div role="table"></div>
     |      ^^^^^^^^^^^^
  24 | <div role="textbox"></div>
  25 |
Selector: div:nth-child(22)
error: Prefer to use the native <textarea> element (prefer-native-element) at test-files/rules/prefer-native-element.html:24:6:
  22 | <div role="region"></div>
  23 | <div role="table"></div>
> 24 | <div role="textbox"></div>
     |      ^^^^^^^^^^^^^^
  25 |
Selector: div:nth-child(23)"
`;
